--- a/concerns.html
+++ b/concerns.html
@@ -38,42 +38,31 @@
     <a href="contact.html">Contact</a>
 
   </div>
-  <div id="title"><h1>The Daily Blog</h1></div>
+  <div id="title"><h1>The Seperation Of Concerns</h1></div>
 
 
 
   <div id="main" class="container">
     <div id="heroSection">
-      <div class="hero"><a href="concerns.html"><img src="SOC.jpeg" alt="" class="center"></a></div>
+      <div class="hero"><a href="#"><img src="SOC.jpeg" alt="" class="center"></a></div>
       <P class="postInfo">James Murry <br>5 days ago</P>
     </div>
     <div class="headStyle">
       <h2>What is Seperation of Concerns?</h2>
       <p>
         In computer science, separation of concerns is a design principle for separating a computer program into distinct sections. Each section addresses a separate concern, a set of information that affects the code of a computer program. A concern can be as general as "the details of the hardware for an application", or as specific as "the name of which class to instantiate". </p>
-    </div>
-
-  <hr>
-
-  <div id="heroSection">
-    <div class="hero"><a href="#"><img src="test.jpg" alt="" class="center"></a></div>
-    <P class="postInfo">James Murry <br>4 days ago</P>
-  </div>
-<div class="headStyle">
-  <h2>The MVC</h2>
-<p>Separation of concerns can be expressed as functions, modules, controls, widgets, layers, tiers, services, and even files. Learn how the MVC can help manage your code effectively.</p>
+        </div>
+        <div class="headStyle">
+        <h2>Why is seperation of concerns important?</h2>
+        <p>Seperation of concerns is important to code because when used properly you can create more manageable code. Lets say you want to create a reactive website. When creating your website odds are your not going to want to manage all of your code in one file. Instead you will have one file for your HTML, another for your CSS, and then one more for your JavaScript. The seperation of these files ultimately are a practice of seperation of  concern. There are endless advantages of this practice. A big one from this example would be readability of code. When you or one of your peers checks back on your code they will be able to easily find the file for which they are looking for.</p>
+      </div>
+      <div class="headStyle">
+        <h2>SOC inside of JavaScript</h2>
+<p>In a broad sense, SoC refers to the idea that computer programs should be separated into distinct sections so that each section addresses a specific concern. By distinguishing parts of our code within well-defined interfaces, we can create programs that have distinct subroutines mapped out into more readable terms. In doing so, we can maintain order within our program while allowing for more concise logical conclusions on a step-by-step basis. Furthermore, these subroutines may be utilized by other programs as a means function callbacks. In JavaScript we use a methodology called the MVC or Model View Controller..</p>        
 </div>
 
-  <hr>
-
-  <div id="heroSection">
-    <div class="hero"><a href="crud.html"><img src="CRUD.png" alt="" class="center"></a></div>
-    <P class="postInfo">James Murry <br>3 days ago</P>
-  </div>
-<div class="headStyle">
-  <h2>CRUD</h2>
-  <p>CRUD refers to the four basic operations a software application should be able to perform – Create, Read, Update, and Delete. In such apps, users must be able to create data, have access to the data in the UI by reading the data, update or edit the data, and delete the data.</p>
-</div>
+    <a href="#" class="previous">&laquo; Previous</a>
+    <a href="#" class="next">Next &raquo;</a>
 
   
 </div>
